--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <div class="content1">
   <div class="row">
     <div class="col-md-6">
-      <img src="/static/img/home1.jpg" alt="">
+      <img src="/static/image/home1.jpg" alt="">
     </div>
     <div class="col-md-6">
       <div class="about">
